Uncomment a call to SetColor that is needed.  b=181336  r+sr=bzbarsky